fixup: render for account record list

--- a/much-notes-miniprogram/pages/jizhang/index.wxml
+++ b/much-notes-miniprogram/pages/jizhang/index.wxml
@@ -15,7 +15,7 @@
       <view class='total-title'>{{cmonth}}月收入: </view><view class='total-sr'>￥{{sr/100}}</view>
       <view class='total-title'>{{cmonth}}月结余: </view><view class='total-sr'>￥{{(sr-zc)/100}}</view>
     </view>
-    
+
   </view>
   <scroll-view class='list-wrap' scroll-y="true" bindscrolltolower="onBottom">
     <!-- <view id="container"> -->
@@ -23,21 +23,21 @@
         <view class="group">
           <view id="sticky{{index}}" class="sticky {{positions[index]}}">
             <view class='day-info-wrap'>
-             <!-- <view class='day-info-date'>{{item.total.time}}</view> -->
+             <view class='day-info-date'>{{item.total.time}}</view>
               <view class='day-info-total'>
                 <view class='day-info-sr'>收入: ￥{{item.total.sr/100}}</view>
                 <view class='day-info-zc'>支出: ￥{{item.total.zc/100}}</view>
               </view>
             </view>
-            
+
           </view>
 
           <view class="content">
             <block wx:for="{{item.datas}}">
               <view class='record-item' bindtap='toDetail' data-id='{{item.id}}'>
                 <view class='item-info-wrap'>
-                  <image class='item-icon' mode='widthFix' src="{{categorys[item.category_id].icon}}"></image>
-                  <view>{{categorys[item.category_id].name}}</view>
+                  <image class='item-icon' mode='widthFix' src="{{categorys[item.categoryId].icon}}"></image>
+                  <view>{{categorys[item.categoryId].name}}</view>
                   <view class='item-remark'>{{(item.remark!=null&&item.remark!='')?'('+item.remark+')':''}}</view>
                 </view>
                 <view>{{item.type==0?'-':''}}￥{{item.money/100}}</view>
