--- a/much-notes-miniprogram/pages/jizhang/index.wxml
+++ b/much-notes-miniprogram/pages/jizhang/index.wxml
@@ -7,10 +7,11 @@
         <view class="ab-name">{{accountBook.name}}</view>
         <image class="arrow-bottom" mode='widthFix' src="../../imgs/icon_arrow_bottom.png"></image>
       </view>
-      <view bindtap="toAbDetail" class="ab-count" style="background-image: url({{BackgroundImg}})">{{accountBook.count}}人</view>
+      <view bindtap="toAbDetail" class="ab-count" style="background-image: url({{BackgroundImg}})">{{accountBook.countInfo}}</view>
     </view>
-    <view class='total-zc'>￥{{zc/100.0}}</view>
-    <view class='total-title'>{{cmonth}}月支出</view>
+    <view class='total-wrap'>
+      <view class='total-title'>{{cmonth}}月支出: </view><view class='total-zc'>￥{{zc/100.0}}</view>
+    </view>
     <view class='total-wrap'>
       <view class='total-title'>{{cmonth}}月收入: </view><view class='total-sr'>￥{{sr/100}}</view>
       <view class='total-title'>{{cmonth}}月结余: </view><view class='total-sr'>￥{{(sr-zc)/100}}</view>
@@ -25,11 +26,10 @@
             <view class='day-info-wrap'>
              <view class='day-info-date'>{{item.total.time}}</view>
               <view class='day-info-total'>
-                <view class='day-info-sr'>收入: ￥{{item.total.sr/100}}</view>
                 <view class='day-info-zc'>支出: ￥{{item.total.zc/100}}</view>
+                <view class='day-info-sr'>收入: ￥{{item.total.sr/100}}</view>
               </view>
             </view>
-
           </view>
 
           <view class="content">
