hide ui if can't edit

--- a/much-notes-miniprogram/pages/balance/index.wxml
+++ b/much-notes-miniprogram/pages/balance/index.wxml
@@ -14,9 +14,8 @@
       </view>
       <view class='item-right-wrap'>
         <view class='item-balance'>￥{{item.balance/100}}</view>
-        <image mode='widthFix' class='item-img-arrow' src='../../imgs/icon_arrow.png'></image>
+        <view wx:if="{{item.show}}"><image mode='widthFix' class='item-img-arrow' src='../../imgs/icon_arrow.png'></image></view>
       </view>
-
     </view>
   </view>
 </view>
